--- a/src/main.css
+++ b/src/main.css
@@ -1,28 +1,30 @@
-/* css初始化 */
-html,body,#root{height:100%;width:100%;}
-body,header,input,span,div,section,aside,dl,dt,dd,nav,table,tr,th,td,p{padding: 0;margin: 0}
-input,textarea,select{outline: none;border:none;}
-a{text-decoration: none;}
-em{font-style:normal;}
-ul{list-style: none;}
-table{border-collapse:collapse;border-spacing:0}
-::-webkit-scrollbar{width: 6px;height: 6px;}    /* 滚动条样式 */
-::-webkit-scrollbar-thumb{border-radius: 10px;background: #e6e8e9;}    /* 滚动条滑块样式 */
-/* css初始化结束 */
+html,body,#root{width: 100%;height: 100%;}
+#root{
+    background: #00CCCC;padding: 96px 6px 6px 212px;
+    width: 100%;height: 100%;
+    box-sizing: border-box;-webkit-box-sizing: border-box;
+}
 .main-header{
-    height: 60px;width: 100%;
+    height: 90px;width: 100%;
+    display: flex;display: -webkit-flex;
+    justify-content: space-between;
     position: fixed;left: 0;top: 0;z-index: 101;
-    background: #09b2b0;color: white;
-    text-align: center;line-height: 60px;
+    color: white;background: url(img/main_header.png) no-repeat;
+    background-size: 100% 100%;line-height: 60px;
 }
 .main-menus{
-    width: 200px;height: 100%;
+    width: 212px;height: 100%;
     position: fixed;left: 0;top: 0;z-index: 100;
     box-sizing: border-box;-webkit-box-sizing: border-box;
-    background: orange;padding-top: 60px;
+    padding: 96px 6px 6px;
+}
+.main-sidebar{
+    width: 100%;height: 100%;background: #fff;
+    box-sizing: border-box;-webkit-box-sizing: border-box;
+    border: 2px solid #009966;
 }
 .main-container{
     width: 100%;height: 100%;position: relative;
     box-sizing: border-box;-webkit-box-sizing: border-box;
-    padding: 60px 0 0 200px;background: #cccccc;
+    border: 2px solid #009966;background: #fff;
 }
