--- a/src/main.css
+++ b/src/main.css
@@ -1,30 +1,19 @@
-html,body,#root{width: 100%;height: 100%;}
-#root{
-    background: #00CCCC;padding: 96px 6px 6px 212px;
-    width: 100%;height: 100%;
-    box-sizing: border-box;-webkit-box-sizing: border-box;
-}
-.main-header{
-    height: 90px;width: 100%;
-    display: flex;display: -webkit-flex;
-    justify-content: space-between;
-    position: fixed;left: 0;top: 0;z-index: 101;
-    color: white;background: url(img/main_header.png) no-repeat;
-    background-size: 100% 100%;line-height: 60px;
-}
-.main-menus{
-    width: 212px;height: 100%;
-    position: fixed;left: 0;top: 0;z-index: 100;
-    box-sizing: border-box;-webkit-box-sizing: border-box;
-    padding: 96px 6px 6px;
-}
-.main-sidebar{
-    width: 100%;height: 100%;background: #fff;
-    box-sizing: border-box;-webkit-box-sizing: border-box;
-    border: 2px solid #009966;
-}
-.main-container{
-    width: 100%;height: 100%;position: relative;
-    box-sizing: border-box;-webkit-box-sizing: border-box;
-    border: 2px solid #009966;background: #fff;
-}
+
+#components-layout-demo-custom-trigger .trigger {
+    font-size: 18px;
+    line-height: 64px;
+    padding: 0 16px;
+    cursor: pointer;
+    transition: color .3s;
+  }
+  
+  #components-layout-demo-custom-trigger .trigger:hover {
+    color: #108ee9;
+  }
+  
+  #components-layout-demo-custom-trigger .logo {
+    height: 32px;
+    background: #333;
+    border-radius: 6px;
+    margin: 16px;
+  }
