--- a/src/login.css
+++ b/src/login.css
@@ -1,11 +1,25 @@
-/* css初始化 */
-html,body,#root{height:100%;width:100%;}
-body,header,input,span,div,section,aside,dl,dt,dd,nav,table,tr,th,td,p{padding: 0;margin: 0}
-input,textarea,select{outline: none;border:none;}
-a{text-decoration: none;}
-em{font-style:normal;}
-ul{list-style: none;}
-table{border-collapse:collapse;border-spacing:0}
-::-webkit-scrollbar{width: 6px;height: 6px;}    /* 滚动条样式 */
-::-webkit-scrollbar-thumb{border-radius: 10px;background: #e6e8e9;}    /* 滚动条滑块样式 */
-/* css初始化结束 */
+html,body,#root{width: 100%;height: 100%;background: transparent;}
+.login-container{
+    background: #fff;padding-top: 30px;
+    box-sizing: border-box;-webkit-box-sizing: border-box;
+    width: 100%;height: 100%;
+    border-radius: 6px;position: absolute;
+    -webkit-app-region: drag;
+}
+.login-close{
+    position: fixed;z-index: 10;color: red;
+    font-size: 20px;top: 5px;right: 10px;
+    -webkit-app-region: no-drag;
+}
+.login-content{
+    width: 300px;margin: auto;-webkit-app-region: no-drag;
+}
+.login-avatar{
+    color: #108ee9;text-align: center;
+}
+.login-welcome{
+    font-size: 24px;color: #108ee9;line-height: 48px;text-align: center;
+}
+.login-input-row{
+    width: 100%;margin-bottom: 24px;
+}
