--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,4 @@
+html,body,#root{width: 100%;height: 100%;}
 #root .main-spread{padding-left: 64px;}
 #root .main-container-spread{padding-left: 80px;}
 .main-header{
