--- a/src/login.css
+++ b/src/login.css
@@ -23,3 +23,6 @@ html,body,#root{width: 100%;height: 100%;background: transparent;}
 .login-input-row{
     width: 100%;margin-bottom: 24px;
 }
+.login-button{
+    width: 100%;
+}
